Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Allow adding and downloading an attachment in a response.  [maurits]

- Store rendered html on the response; remove that after editing.
  Makes views faster.  Basically a memoize variant. [maurits]

- In the creation view, test that a response is valid before adding
  it. [maurits]

- Let unit tests pass on Plone 3.1 by providing an IWorkflowChain
  adapter. [maurits]

- Add migration step for making sure that the Description of all
  PoiIssues in the portal_catalog is of type unicode instead of
  string, just like the real objects. [maurits]

- For the Description of a PoiIssue always return unicode. [maurits]

- Use PersistentList instead of the combination of PersistentMapping
  and self.highest in ResponseContainer.  Works just as well and feels
  easier. [maurits]

- Add first tests for migration of individual issue.
  [maurits]

- Add migration (GenericSetup upgrade step) from old to new style
  responses.
  [maurits]

- Use the text of new style responses too for the SearchableText of an
  issue.
  [maurits]

- No __parent__ and __name__ for PoiIssue anymore.  Instead pass the
  issue as descriptions argument when firing the ObjectModifiedEvent
  for a response.  Works fine and needs no migration.
  [maurits]

- Use __parent__ and __name__ for responses.
  [maurits]

- Add "self.__parent__ = self.__name__ = None" to __init__() of
  PoiIssue.  Needs migration.  Not sure if that is the best solution
  to the problem that in the event handler for modified responses the
  issue has no acquisition context.

- Fire ObjectRemovedEvent when deleting a response and
  ObjectModifiedEvent when modifying it.
  [maurits]

- When adding something to an issue check that it really is an
  IResponse.
  [maurits]

- Add buttons and browser views for deleting and editing responses.
  [maurits]
