@@ -1,9 +1,6 @@
 To do in this branch before merging back to trunk
 =================================================
 
-- Only show options like changing state when the user has permission
-  to use them.
-
 - Add handling for the target releases field (available only when
   using the PSC tracker).
 
